feat(ayokoding-web): bring 4 by-example tutorials to EXCELLENT production standards
Enhanced Java, Spring Boot, PostgreSQL, and Spring Data JPA by-example tutorials
to achieve 100% compliance with by-example convention standards.

Content enhancements:
- Java: Enhanced examples 31-34, 65, 70, 75, 80 with proper annotation density
  (1.0-2.25 range), fixed broken markdown in Example 80
- Spring Data JPA: Fixed over-annotated examples 3, 5, 6 (condensed from
  2.51-2.71 to 1.0-1.14 density), added missing "Why It Matters" sections
- PostgreSQL: Optimized annotation patterns for consistency
- Spring Boot: Verified 85 examples meet all standards

Convention updates:
- Added "code splitting pattern" rule to ex-co-tu__by-example.md with 5 clear
  indicators for when to split code blocks (commented-out code, mixed languages,
  multiple libraries, >30% explanatory comments, combined patterns)
- Updated by-example-checker agent with code splitting validation
- Updated by-example-maker agent with splitting guidance

Agent fixes:
- Fixed wow__workflow-fixer agent color (yellow → purple per convention)
- Fixed workflow agent name reference in ex-wf-me__workflow-pattern.md

Quality metrics (all 4 tutorials):
- 330 total examples validated
- 100% five-part format compliance
- 100% self-containment (all examples copy-paste-runnable)
- 1.0-2.25 annotation density per example
- 0 subgraphs (all diagrams mobile-friendly)
- 0 violations in strict mode validation

BREAKING CHANGE: None - backward compatible content enhancements